# Thesis

./: .gitignore  .gitmodules  AI_CONVENTIONS.md  Pipfile  Roadmap.md  ZFastTrie.go  go.mod  go.sum  pyproject.toml
bench_results/: approx_range_emptiness.txt  approx_range_emptiness_report.md  approx_range_grid_report.md  are_tradeoff_report.md  exact_range_emptiness_report.md
bits/: BITSTRING_REFACTOR_PLAN.md  HASHING_STRATEGY.md  PERFORMANCE.md  REFACTOR_REPORT.md  at_bench_test.go  bit_string.go  bit_string_performance_test.go  bitpack.go  char_bit_string.go  compare_bench_test.go  dumb_test.go  equal_bench_test.go  hash_bench_test.go  init_bench_test.go  iterator.go  lcp_bench_test.go  lcp_test.go  new_ops_bench_test.go  prefix_bench_test.go  test_utils.go  two_fattest_test.go  uint64_array_bit_string.go  uint_vs_chars_test.go  unit64_bit_string.go  utils.go
emptiness/: README.md  STREAMING.md  TODO.md
errutil/: errutil.go
local_exact_range/: LocalExactRangeStructure.md  README.md  approximate_range_emptiness.go  approximate_range_emptiness.md  approximate_range_emptiness_test.go  (+9 more)
mmph/lemonhash/: CMakeLists.txt  Makefile  PERFORMANCE.md  README.md  VENDORED_DEPENDENCIES.md  bench_test.go  lemonhash.go  lemonhash_test.go  wrapper.h
mmph/lemonhash/cpp/: wrapper.cpp
mmph/lemonhash/ext/LeMonHash/: CMakeLists.txt
mmph/lemonhash/ext/LeMonHash/extlib/ds2i/: util.hpp
mmph/lemonhash/ext/LeMonHash/extlib/sdsl-lite/include/sdsl/: iterators.hpp
mmph/lemonhash/ext/LeMonHash/extlib/simpleRibbon/: CMakeLists.txt  README.md  SimpleRibbon.cpp
mmph/lemonhash/ext/LeMonHash/extlib/simpleRibbon/extlib/ribbon/: config.hpp  sorter.cpp
mmph/lemonhash/ext/LeMonHash/extlib/simpleRibbon/include/: MultiRetrievalDataStructure.hpp  SimpleRibbon.h
mmph/lemonhash/ext/LeMonHash/include/: LeMonHash.hpp  LeMonHashHeuristic.hpp  LeMonHashVL.hpp  LeMonHashVLIndexed.hpp
mmph/lemonhash/ext/LeMonHash/include/bucket_mapping/: LinearBucketMapper.hpp
mmph/lemonhash/ext/LeMonHash/include/support/: TreePath.hpp  util.h
(+479 files in other folders)
